# medical_image_ai_toolkit

./: README.md  environment.yml  pyproject.toml  run_tests_and_trace.py
datamodules/: lazy_patient_datasource.py
docs/: architecture.md  extending.md  requirements.md  requirements.yaml  tensor_interface.md  traceability_matrix.md  training_loop.md  training_pipeline.md  validation_philosophy.md
models/: smoke_cnn.py
requirements/: requirements.yaml
scripts/: debug_patient_sample_to_tensor.py
src/medical_image_ai_toolkit/adapters/: patient_sample_to_tensor.py
src/medical_image_ai_toolkit/contracts/: patient_sample_contract.py
src/medical_image_ai_toolkit/datamodules/: tensor_datamodule.py
src/medical_image_ai_toolkit/dataobjects/: annotation_bundle.py  patient_sample.py
src/medical_image_ai_toolkit/datasources/: lazy_patient_datasource.py  medical_image_datasource.py  tensor_datamodule.py
src/medical_image_ai_toolkit/optimization/: sweep_runner.py
src/medical_image_ai_toolkit/training/: medical_image_trainer.py  prepare_training_run.py  run_metadata.py  split_writer.py  splits.py  tasks.py
tests/: conftest.py  test_medical_image_trainer.py  test_patient_sample_contract.py  test_patient_sample_to_tensor.py  test_tensor_datamodule.py
training/: artifact_manager.py  medical_image_trainer.py
visualization/: sample_viz.py
