[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-image-ai-toolkit"
version = "0.1.0"
description = "Reusable medical image AI toolkit with regulatory-grade evidence and data contracts"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "requirement(id): Traceability requirement ID",
]